tracing_tag/mesh/hello1-deploy-v1_tag_envoyfilter.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: hello1-deploy-v1-tag
  namespace: http-hello
spec:
  workloadSelector:
    labels:
      app: hello1-deploy-v1
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      proxy:
        proxyVersion: "^1\\.7\\.*"
      listener:
        filterChain:
          filter:
            name: envoy.http_connection_manager
    patch:
      operation: MERGE
      value:
        name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          tracing:
            custom_tags:
            - tag: version-tag
              environment:
                name: VERSION
                default_value: v1
              request_header:
                name: VERSION
                default_value: hello1-v1
